<resources>
    <string name="app_name">Aplicativo Android - Duplas</string>
    <string name="corrida">Corrida</string>
    <string name="metas">Consultar Metas</string>
    <string name="perfil">Perfil</string>
    <string name="lembrete">Lembrete de Água</string>
    <string name="diario">Diário</string>
    <string name="logo">logo</string>
    <string name="foto">foto</string>
    <string name="conometro">conômetro</string>
    <string name="voltar">voltar</string>
    <string name="quantidade">Quantidade de água hoje: 750ml</string>
    <string name="copos">Quantidade de copos: 4</string>
    <string name="meta">Meta: 2L</string>
    <string name="garrafa">garrafa</string>
    <string name="voltar6">voltar</string>
    <string name="hoje">Hoje</string>
    <string name="caminhar">Caminhar 4km</string>
    <string name="voltar4">voltar</string>
    <string name="beber">Beber 2L de água por dia</string>
    <string name="correr">Correr 3km</string>
    <string name="peso">Reduzir peso</string>
    <string name="calorias">Ingerir 1000 calorias</string>
    <string name="voltar1">voltar</string>
    <string name="email">E-mail:</string>
    <string name="nome">Nome:</string>
    <string name="data">Data de Nascimento:</string>
    <string name="voltar2">voltar</string>
    <string name="start">START</string>
    <string name="tempo">00:00</string>
    <string name="numero">Número:</string>
    <string name="cronometro">cronômetro</string>
    <string name="voltar3">voltar</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="cidade">Cidade:</string>
    <string name="pais">País:</string>
    <string name="estado">Estado:</string>
</resources>